tests/typing/pass/ae/types/types_1.ae

type ('a, 'b) t =
    A of {a : 'a}
  | B of {b : 'b}

type 'a m = {m : 'a}

type n
