tests/typing/errors/useless_patterns/error_1.ae

type t =
    A of {a : int}
  | B of { b : real}

goal g_invalid:
  forall x : t.
    match x with
    | A(y) -> 1
    | D -> 3
    | E -> 2
    | v -> 1
    end <= 2
